--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,10 @@ html, body {
 main {
     position: relative;
     height: 100vh;
+
+    /* Icones redes sociais alinhados a direita */
+    display: flex;
+    justify-content: right;
 }
 
 section#telefone {
@@ -28,4 +32,25 @@ section#telefone {
     height: 627px;
     width: 311px;
     background: url('../images/frame-iphone.png') no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+
+    height: 471px;
+    width: 267px;
+}
+
+section#redes-sociais {
+    position: relative;
+    
+    display: flex;
+    flex-direction: column;
+}
+
+section#redes-sociais > a > img {
+    border-radius: 50%;
+    width: 70px;
 }
